<resources>
    <string name="app_name">BTG App</string>
    <string name="txt_title">Lista de moedas</string>
    <string name="btn_currency_converter">Converter Moedas</string>
    <string name="til_value">Valor</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="txt_error">Ops, algo deu errado!</string>
    <string name="txt_no_network">Por favor, verifique sua conexão com a internet</string>
    <string name="edt_original_currency">De</string>
    <string name="edt_desired_currency">Para</string>
</resources>