<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.presentation.viewmodels.CurrencyConverterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.CurrencyConverterActivity">

        <TextView
            android:id="@+id/txt_title"
            android:text="@string/btn_currency_converter"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_value"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_value"
            android:hint="@string/til_value"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@android:color/background_dark"
            app:hintTextColor="@android:color/background_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm_original_currency">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_value"
                android:text="@={viewModel.currencyValue}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edt_original_currency"
            android:hint="@string/edt_original_currency"
            android:text="@={viewModel.originalCurrency}"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_confirm_original_currency"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm_original_currency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_confirm_original_currency" />

        <Button
            android:id="@+id/btn_confirm_original_currency"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="@{()-> viewModel.confirmOriginalCurrency()}"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/edt_original_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_value"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm_desired_currency"/>

        <EditText
            android:id="@+id/edt_desired_currency"
            android:text="@={viewModel.desiredCurrency}"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/edt_desired_currency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_confirm_desired_currency"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm_desired_currency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_confirm_desired_currency" />

        <Button
            android:id="@+id/btn_confirm_desired_currency"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="@{()-> viewModel.confirmDesiredCurrency()}"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/edt_desired_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_confirm_original_currency"
            app:layout_constraintBottom_toTopOf="@id/btn_currency_converter"/>


        <Button
            android:id="@+id/btn_currency_converter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> viewModel.convert()}"
            android:background="@android:color/holo_red_light"
            android:text="@string/btn_currency_converter"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/txt_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_confirm_desired_currency" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_currency_converter"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Valor obtido: R$200,00" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>